# SpeakBuddy-test

./: LICENSE  main.py  pyproject.toml
controller/api/: __init__.py
controller/api/audio/: __init__.py  audio_v1_controller.py
controller/api/check/: __init__.py  check_v1_controller.py
helper/constant/: path.py
helper/utils/: save_file.py
service/audio/: __init__.py  audio_v1.py
