[tool.poetry]
name = "speakbuddy"
version = "0.1.0"
description = "This is the test Project for SpeakBuddy home task"
authors = ["Derandi Hermanda <derandi.hermanda@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
